# chaos-pendulum-rs

./: Cargo.toml  README.md
.claude/: settings.local.json
src/: main.rs  pendulum.rs  physics.rs  presets.rs  statistics.rs  theme.rs  ui_state.rs  visualization.rs
